# kkestate

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  pyproject.toml  schema.sql  setup.py
kkestate/: __init__.py
kkestate/config/: __init__.py  psgre.py
kkestate/master/: citycode.csv  json_schemas.py
kkestate/test/: testcases.py
kkestate/util/: __init__.py  address_parser.py  cleansing.py  data_analyzer.py  json_cleaner.py  key_mapper.py  key_mapping.py  parser.py  schema_generator.py
main/: crontab  monitor.sh  suumo.py
main/analyze/: ana.py  make_html.sh
main/collect/: README.md  download_reinfolib_estate_all.sh  download_reinfolib_land_all.sh  make_location_mst.py  monitor.sh  reinfolib.py  suumo.py
main/database/: alter.process.sql  crontab  monitor.sh  schema.collect.sql  schema.location.sql  schema.process.sql  schema.reinfolib.sql  suumo.py  view.sql
main/log/: remove.py
main/others/: crontab  process_kill.py
main/process/: README.md  __init__.py  generate_detail_ref.py  make_location_mst.py  process_estate.py  processor.py
main/web/: .env  .gitignore  CLAUDE.md  package-lock.json  package.json  react-router.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
main/web/app/: entry.server.tsx  root.tsx  routes.ts
main/web/app/components/: JapanMapGeolonia.tsx  PriceHistoryChart.tsx
main/web/app/lib/: db.server.ts
main/web/app/routes/: _index.tsx  property.$id.tsx
main/web/app/services/: estate.server.ts
test/: MST.py  test_json_cleansing.py  test_key_mapping.py  test_schema_validation.py
